fixed portrait on large screens in about me page, added bio, removed jobs, fixed spacing in projects buttons

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -10,6 +10,10 @@
     .projects {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .bio-img {
+        margin: 0;
+    }
 }
 
 // Tablets and Small Laptops
@@ -62,6 +66,10 @@
         grid-template-columns: 1fr;
     }
 
+    .bio-img {
+        margin: auto;
+    }
+
     .projects {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -75,5 +83,8 @@
 
     .projects {
         grid-template-columns: 1fr;
+    }
+    .bio-img {
+        margin: auto;
     }
 }
