--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,7 +84,7 @@ main {
 
 .bio-img {
     grid-area: bioimage;
-    margin: auto;
+    // margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
 }
